@@ -8,6 +8,7 @@ AM_PATH_PYTHON
 AC_CONFIG_FILES([
 	bin/sl2d
 	doc/Makefile
+	scripts/Makefile
 	Makefile
 ])
 
