@@ -6,6 +6,8 @@ Version 0.2.2~dev
 	* Catch pre/post command failures, closes: #1849.
 	* Forbid scheduling of the same command twice, closes: #1852.
 	* Allow printing log on stdout in no-daemon mode.
+	* Add scripts as a workaround to current situation with tvrbox
+	  streaming.
 
 Version 0.2.1 Released on 2009/04/09
 
